--- a/fixture/community2/core/Mage/System/uimap/admin/System.yml
+++ b/fixture/community2/core/Mage/System/uimap/admin/System.yml
@@ -114,7 +114,7 @@ system_currencysymbol:
     click_xpath: //ul[@id='nav']//a[contains(@href, 'system_currencysymbol/')]
     title: Manage Currency Symbols / System / Magento Admin
 
-# Transactional email
+#Transactional email
 system_email_template:
     mca: system_email_template/
     click_xpath: //ul[@id='nav']//a[contains(@href, 'system_email_template')]
@@ -140,8 +140,12 @@ system_email_template:
                             filter_template_type: //select[@name='type']
         buttons:
             add_new_template:  //button[span='Add New Template']
-        messages:
+        messages: &templateMessages
             success_create_template: //li[normalize-space(@class)='success-msg' and contains(.,'The email template has been saved.')]
+            confirmation_for_delete: Are you sure that you want to delete this template?
+            success_deleted_template: //li[normalize-space(@class)='success-msg' and contains(.,'The email template has been deleted.')]
+            required_field_message: //div[@id='advice-required-entry-%field%' and text()='This is a required field.']
+            confirmation_convert_to_plain_text: Are you sure that you want to strip tags?
 
 #Add New transactional email
 new_email_template:
@@ -174,12 +178,40 @@ new_email_template:
                             reset_password_url_variable: //a[text()='Reset Password URL']
                         buttons:
                             close_variable_insertion: //div[@id='variables-chooser_close']
-        buttons:
+        buttons: &templateButtons
             back: //button[span='Back']
             reset: //button[span='Reset']
             convert_to_plain_text: //button[span='Convert to Plain Text']
             preview_template: //button[span='Preview Template']
             save_template: //button[span='Save Template']
+            return_html_version: //button[span='Return Html Version']
+            delete: //button[span='Delete Template']
+        messages: *templateMessages
+
+#Edit transactional email
+edit_email_template:
+    mca: system_email_template/edit/id/%id%/
+    title: %template_name% / Transactional Emails / System / Magento Admin
+    uimap:
+        form:
+            fieldsets:
+                -
+                    template_information:
+                        xpath: //form[@id='email_template_edit_form']
+                        buttons:
+                            insert_variable: //button[span='Insert Variable...']
+                        fields:
+                            template_name: //input[@name='template_code']
+                            template_subject: //input[@name='template_subject']
+                            template_content: //textarea[@name='template_text']
+                            template_styles: //textarea[@name='template_styles']
+                -
+                    variable_insertion:
+                        xpath: //div[@id='variables-chooser']
+                        buttons:
+                            close_variable_insertion: //div[@id='variables-chooser_close']
+        buttons: *templateButtons
+        messages: *templateMessages
 
 # Custom Variables:
 system_custom_variables:
